Login page layout bug fix

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,10 +1,64 @@
 page-login {
-  ion-content {
-    .scroll-content {
+  // ion-content {
+  //   .fixed-content,
+  //   .scroll-content {
+  //     display: flex;
+  //     flex-direction: column;
+  //     align-items: center;
+  //     justify-content: center;
+  //   }
+  // }
+
+  // .logo {
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  //   margin-bottom: 20px;
+  //   height: auto;
+  //   width: 100%;
+
+  //   img {
+  //     height: auto;
+  //     width: 75%;
+  //   }
+  // }
+
+  // .login-form {
+  //   display: flex;
+  //   flex-direction: column;
+  //   width: 80%;
+
+  //   .action-buttons {
+  //     margin-top: 20px;
+  //     display: flex;
+  //     flex-direction: column;
+  //   }
+  // }
+
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: $primary-1;
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+
+    .inner-container {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      height: 100%;
+      width: 100%;
+
+      @media screen and (min-width: '720px') {
+        width: 720px;
+        min-width: 720px;
+        max-width: 720px;
+        margin: auto;
+      }
     }
   }
 
@@ -16,7 +70,7 @@ page-login {
     width: 100%;
 
     img {
-      width: 75%;
+      width: 50%;
     }
   }
 
